// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidatorRow > should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <div
                class="relative grow leading-[17px] sm:leading-5 text-left"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm w-full font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0xB8Be76b31E402a2D89294Aa107056484Bef94362
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative bg-transparent dark:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
                data-testid="ValidatorRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <div
                class="relative grow leading-[17px] sm:leading-5 text-left"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm w-full font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0xB8Be76b31E402a2D89294Aa107056484Bef94362
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative bg-transparent dark:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
                data-testid="ValidatorRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render changed style when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 dim:border-theme-warning-600"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 dim:border-theme-warning-600"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <div
                class="relative grow leading-[17px] sm:leading-5 text-left"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm w-full font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0xB8Be76b31E402a2D89294Aa107056484Bef94362
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 dim:border-theme-warning-600"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0! bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 dim:border-theme-warning-600"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="ValidatorVoteAmount"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 dim:border-theme-warning-600"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 h-[34px] overflow-hidden"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! text-right focus:text-left pr-8"
                      data-testid="InputCurrency"
                      name="amount"
                      placeholder="0"
                      type="text"
                      value="30"
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7"
                data-testid="ValidatorVoteAmount__ticker"
              >
                <span
                  class="text-theme-text"
                >
                  Mainsail
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 dim:border-theme-warning-600"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none dark:hover:text-theme-primary-500 -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative text-theme-warning-700 hover:text-theme-warning-800"
                data-testid="ValidatorRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Changed
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the selected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 dim:border-theme-dim-navy-600"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 dim:border-theme-dim-navy-600"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <div
                class="relative grow leading-[17px] sm:leading-5 text-left"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm w-full font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0xB8Be76b31E402a2D89294Aa107056484Bef94362
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 dim:border-theme-dim-navy-600"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0! bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 dim:border-theme-dim-navy-600"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 dim:border-theme-dim-navy-600"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative bg-transparent dark:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-primary-600 dark:hover:text-theme-primary-700"
                data-testid="ValidatorRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures transition-colors duration-200"
                      data-testid="TruncateEnd"
                    >
                      testusernaame
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative bg-transparent dark:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
                data-testid="ValidatorRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <div
                class="relative grow leading-[17px] sm:leading-5 text-left"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm w-full font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0x56F925416Ef2725646442D5E0150088bd7202aCd
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <span>
                <span>
                  <span
                    class="w-full sm:w-auto"
                  >
                    <button
                      class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 hover:text-theme-primary-700 dark:hover:text-theme-primary-500 -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative bg-transparent dark:bg-transparent text-black dark:text-theme-black dim:text-theme-dim-500"
                      data-testid="ValidatorRow__toggle-2"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center gap-2"
                      >
                        Select
                      </div>
                    </button>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the unselected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 dim:border-theme-danger-400"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 dim:border-theme-danger-400"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <div
                class="relative grow leading-[17px] sm:leading-5 text-left"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm w-full font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0xB8Be76b31E402a2D89294Aa107056484Bef94362
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 dim:border-theme-danger-400"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0! bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 dim:border-theme-danger-400"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 dim:border-theme-danger-400"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative bg-transparent dark:bg-transparent text-theme-danger-400 hover:text-theme-danger-500 dark:text-theme-danger-400 dark:hover:text-theme-danger-500"
                data-testid="ValidatorRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Unselected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 dim:last:border-theme-dim-700 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-start"
            >
              <div
                class="relative grow leading-[17px] sm:leading-5 text-left"
              >
                <span>
                  <span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden leading-[17px] text-sm w-full font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0xB8Be76b31E402a2D89294Aa107056484Bef94362
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <span>
              <span>
                <div
                  class="bg-theme-secondary-200 text-theme-secondary-700 dark:border-theme-dark-700 dark:text-theme-dark-200 dim:border-theme-dim-700 dim:text-theme-dim-200 group-hover:bg-theme-secondary-300 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent dark:group-hover:bg-transparent"
                  data-testid="ValidatorStatus__standby"
                >
                  Standby
                </div>
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <span>
              <span>
                <a
                  class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 dim:[&_svg]:text-theme-dim-500 w-24 md:w-auto"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                  >
                    <span>
                      View
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                    data-testid="Link__external"
                  >
                    <div
                      style="height: 12px; width: 12px;"
                    >
                      <svg
                        id="arrow-external"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="ValidatorVoteAmount"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-center border-t-2 border-b-2 border-transparent"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 dim:border-theme-dim-700 dim:bg-theme-dim-950 h-[34px] overflow-hidden"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! text-theme-secondary-text text-right focus:text-left pr-8"
                      data-testid="InputCurrency"
                      disabled=""
                      name="amount"
                      placeholder="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7 cursor-default"
                data-testid="ValidatorVoteAmount__ticker"
              >
                <span
                  class="text-theme-secondary-400 dark:text-theme-secondary-700"
                >
                  Mainsail
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-primary-100 dim:group-hover:bg-theme-dim-950 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-auto rounded py-0 text-sm leading-[17px] hover:underline relative bg-transparent dark:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
                data-testid="ValidatorRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
